// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcSidebarNav renders navItems into a list 1`] = `
<div class="oc-app-navigation-expanded" id="web-nav-sidebar">
  <button aria-label="Toggle sidebar" class="toggle-sidebar-button oc-pb-s oc-pt-m oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw toggle-sidebar-button-expanded oc-pr-s" type="button">
    <oc-icon-stub accessiblelabel="" color="" filltype="line" name="arrow-drop-left" size="large" type="span" variation="passive"></oc-icon-stub>
  </button>
  <nav aria-label="Sidebar navigation menu" class="oc-sidebar-nav oc-mb-m oc-mt-s oc-px-xs">
    <oc-list-stub>
      <div class="oc-ml-s oc-background-primary-gradient" id="nav-highlighter"></div>
      <sidebar-nav-item-stub active="true" filltype="fill" icon="folder" index="00000000000000000000000000000000" name="Personal" target="/files/list/all"></sidebar-nav-item-stub>
      <sidebar-nav-item-stub filltype="fill" icon="share-forward" index="00000000000000000000000000000000" name="Shares" target="/files/list/shared-with-me"></sidebar-nav-item-stub>
      <sidebar-nav-item-stub filltype="fill" icon="delete" index="00000000000000000000000000000000" name="Deleted files" target="/files/list/trash-bin"></sidebar-nav-item-stub>
    </oc-list-stub>
  </nav>
  <span class="footer">Footer</span>
</div>
`;

exports[`OcSidebarNav toggles back into open state upon button click 1`] = `
<div class="oc-app-navigation-expanded" id="web-nav-sidebar">
  <button aria-label="Toggle sidebar" class="toggle-sidebar-button oc-pb-s oc-pt-m oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw toggle-sidebar-button-expanded oc-pr-s" type="button">
    <oc-icon-stub accessiblelabel="" color="" filltype="line" name="arrow-drop-left" size="large" type="span" variation="passive"></oc-icon-stub>
  </button>
  <nav aria-label="Sidebar navigation menu" class="oc-sidebar-nav oc-mb-m oc-mt-s oc-px-xs">
    <oc-list-stub>
      <div class="oc-ml-s oc-background-primary-gradient" id="nav-highlighter"></div>
      <sidebar-nav-item-stub active="true" filltype="fill" icon="folder" index="00000000000000000000000000000000" name="Personal" target="/files/list/all"></sidebar-nav-item-stub>
      <sidebar-nav-item-stub filltype="fill" icon="share-forward" index="00000000000000000000000000000000" name="Shares" target="/files/list/shared-with-me"></sidebar-nav-item-stub>
      <sidebar-nav-item-stub filltype="fill" icon="delete" index="00000000000000000000000000000000" name="Deleted files" target="/files/list/trash-bin"></sidebar-nav-item-stub>
    </oc-list-stub>
  </nav>
  <span class="footer">Footer</span>
</div>
`;

exports[`OcSidebarNav toggles into closed state upon button click 1`] = `
<div class="oc-app-navigation-collapsed" id="web-nav-sidebar">
  <button aria-label="Toggle sidebar" class="toggle-sidebar-button oc-pb-s oc-pt-m oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw toggle-sidebar-button-collapsed" type="button">
    <oc-icon-stub accessiblelabel="" color="" filltype="line" name="arrow-drop-right" size="large" type="span" variation="passive"></oc-icon-stub>
  </button>
  <nav aria-label="Sidebar navigation menu" class="oc-sidebar-nav oc-mb-m oc-mt-s oc-px-xs">
    <oc-list-stub>
      <div class="oc-ml-s oc-background-primary-gradient" id="nav-highlighter"></div>
      <sidebar-nav-item-stub active="true" collapsed="true" filltype="fill" icon="folder" index="00000000000000000000000000000000" name="Personal" target="/files/list/all"></sidebar-nav-item-stub>
      <sidebar-nav-item-stub collapsed="true" filltype="fill" icon="share-forward" index="00000000000000000000000000000000" name="Shares" target="/files/list/shared-with-me"></sidebar-nav-item-stub>
      <sidebar-nav-item-stub collapsed="true" filltype="fill" icon="delete" index="00000000000000000000000000000000" name="Deleted files" target="/files/list/trash-bin"></sidebar-nav-item-stub>
    </oc-list-stub>
  </nav>
  <span class="footer">Footer</span>
</div>
`;
